--- a/portifolio.html
+++ b/portifolio.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -12,7 +13,43 @@
 </head>
 
 <body>
+  <div class="mt-3">
+    <header>
+      <nav class="d-flex align-items-center justify-content-between h-100 px-5 pb-2">
 
+        <div class="d-flex align-items-center gap-2">
+          <img src="./assets/avatar.png" alt="avatar image" class="me-img rounded-circle">
+          <h5>Douglas Rocha</h5>
+        </div>
+
+        <ul class="d-flex justify-content-between fs-5 nav-width pt-2">
+          <li class="list position-relative"><a class="nav-link" href="#home">Home</a></li>
+          <li class="list position-relative"><a class="nav-link" href="#about">About</a></li>
+          <li class="list position-relative"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="list position-relative"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+
+      </nav>
+    </header>
+
+    <section class="bg-custom position-relative d-flex flex-column align-items-center justify-content-center">
+
+      <div class="d-flex align-items-center justify-content-center flex-column h-100 w-75">
+        <h1 class="text-center fs-name">Hey, I'm Douglas Rocha</h1>
+        <p class="text-center mt-3 fs-5">From factory floors in Japan to building web experiences — I’m a self-taught developer who turned frustration into transformation. I write code with the same grit that got me out of the factory.</p>
+        <a class="rounded mt-4 fs-4 px-4 py-2 btn-project" href="#projects">PROJECTS</a>
+        <div class="social bg-light position-absolute start-0 ">
+          <ul class=" m-0 p-0 d-flex flex-column align-items-center rounded social-shadow">
+            <li class="m-2 p-2 rounded"><a href=""><i class="fa-brands fa-linkedin fs-1 text-center"></i></a></li>
+            <li class="m-2 p-2 rounded"><a href=""><i class="fa-brands fa-github fs-1 text-cente"></i></a></li>
+          </ul>
+        </div>
+      </div>
+
+
+    </section>
+
+  </div>
 </body>
 
 </html>
