added carousel for stack

--- a/portifolio.html
+++ b/portifolio.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-  <div class="mt-3">
+  <div>
     <header>
-      <nav class="d-flex align-items-center justify-content-between h-100 px-5 pb-2">
+      <nav class="fixed-top bg-light d-flex align-items-center justify-content-between px-5 pb-2 py-3 nav-shadow">
 
         <div class="d-flex align-items-center gap-2">
           <img src="./assets/avatar.png" alt="avatar image" class="me-img rounded-circle">
@@ -36,7 +36,9 @@
 
       <div class="d-flex align-items-center justify-content-center flex-column h-100 w-75">
         <h1 class="text-center fs-name">Hey, I'm Douglas Rocha</h1>
-        <p class="text-center mt-3 fs-5">From factory floors in Japan to building web experiences — I’m a self-taught developer who turned frustration into transformation. I write code with the same grit that got me out of the factory.</p>
+        <p class="text-center mt-3 fs-5">From factory floors in Japan to building web experiences — I’m a self-taught
+          developer who turned frustration into transformation. I write code with the same grit that got me out of the
+          factory.</p>
         <a class="rounded mt-4 fs-4 px-4 py-2 btn-project" href="#projects">PROJECTS</a>
         <div class="social bg-light position-absolute start-0 ">
           <ul class=" m-0 p-0 d-flex flex-column align-items-center rounded social-shadow">
@@ -45,10 +47,44 @@
           </ul>
         </div>
       </div>
+      <i class="fa-solid fa-angles-down fs-1 scroll-arrow"></i>
+    </section>
+    <section id="about" class="my-3 d-flex align-items-center justify-content-center flex-column">
+      <h2 class="my-5">
+        <span class="position-relative line">About me</span>
+      </h2>
 
+      <p class="mt-2 text-center w-50 fs-5">Hi, I’m Douglas. After ten years in Japan’s manufacturing industry, I
+        realized I wanted challenge and purpose in every workday. I spent two years teaching myself JavaScript and, in
+        2025, graduated from Le Wagon Tokyo’s Fullstack Web Development Bootcamp. Now I’m looking for a team that’s both
+        ambitious and down-to-earth—a place where people actually enjoy their work and respect one another. If getting
+        here took this much dedication, imagine what I’ll achieve once I’m fully on board with your next project.</p>
+    </section>
+    <section class="py-4 ">
+      <div class="overflow-hidden">
+        <div class="carousel-container d-flex gap-5 mt-2">
+          <img src="./assets/stack-img/html.png" alt="html icon">
+          <img src="./assets/stack-img/css.png" alt="css icon">
+          <img src="./assets/stack-img/js.png" alt="js icon">
+          <img src="./assets/stack-img/ruby.png" alt="ruby icon">
+          <img src="./assets/stack-img/git.png" alt="git icon">
+          <img src="./assets/stack-img/sql.png" alt="sql icon">
+            <!------ duplicated icons ------->
+          <img src="./assets/stack-img/html.png" alt="html icon">
+          <img src="./assets/stack-img/css.png" alt="css icon">
+          <img src="./assets/stack-img/js.png" alt="js icon">
+          <img src="./assets/stack-img/ruby.png" alt="ruby icon">
+          <img src="./assets/stack-img/git.png" alt="git icon">
+          <img src="./assets/stack-img/sql.png" alt="sql icon">
+        </div>
+      </div>
+    </section>
+    <section>
+      <h2 class="mt-4 text-center position-relative">
+        <span class="line">Projects</span>
+      </h2>
 
     </section>
-
   </div>
 </body>
 
