Finished projects section

--- a/portifolio.html
+++ b/portifolio.html
@@ -42,8 +42,8 @@
         <a class="rounded mt-4 fs-4 px-4 py-2 btn-project" href="#projects">PROJECTS</a>
         <div class="social bg-light position-absolute start-0 ">
           <ul class=" m-0 p-0 d-flex flex-column align-items-center rounded social-shadow">
-            <li class="m-2 p-2 rounded"><a href=""><i class="fa-brands fa-linkedin fs-1 text-center"></i></a></li>
-            <li class="m-2 p-2 rounded"><a href=""><i class="fa-brands fa-github fs-1 text-cente"></i></a></li>
+            <li class="m-2 p-2 rounded"><a href="https://www.linkedin.com/in/douglas-rocha97" target="_blank"><i class="fa-brands fa-linkedin fs-1 text-center"></i></a></li>
+            <li class="m-2 p-2 rounded"><a href="https://github.com/douglas-rocha97" target="_blank"><i class="fa-brands fa-github fs-1 text-cente"></i></a></li>
           </ul>
         </div>
       </div>
@@ -69,6 +69,7 @@
           <img src="./assets/stack-img/ruby.png" alt="ruby icon">
           <img src="./assets/stack-img/git.png" alt="git icon">
           <img src="./assets/stack-img/sql.png" alt="sql icon">
+          <img src="./assets/stack-img/rails.png" alt="rails icon">
             <!------ duplicated icons ------->
           <img src="./assets/stack-img/html.png" alt="html icon">
           <img src="./assets/stack-img/css.png" alt="css icon">
@@ -76,13 +77,63 @@
           <img src="./assets/stack-img/ruby.png" alt="ruby icon">
           <img src="./assets/stack-img/git.png" alt="git icon">
           <img src="./assets/stack-img/sql.png" alt="sql icon">
+          <img src="./assets/stack-img/rails.png" alt="rails icon">
         </div>
       </div>
     </section>
-    <section>
+
+    <section id="projects" class="py-4">
       <h2 class="mt-4 text-center position-relative">
         <span class="line">Projects</span>
       </h2>
+
+      <div class="cards px-5 mx-auto">
+        <!-------- First Project -------->
+        <div class="card p-2 mt-4 border-0">
+          <div class="d-flex justify-content-evenly mx-auto p-1 w-100 rounded project-bg">
+            <img src="./assets/projects/foodlyMain.png" alt="foodly">
+            <img src="./assets/projects/foodlyRecipe.png" alt="foodly">
+          </div>
+          <div class="mt-3">
+            <h4>Foodly</h4>
+            <p>mobile app that helps users find recipe ideas based on the ingredients they already have at home. By scanning an image of your fridge or pantry, Foodly identifies available ingredients and suggests recipes tailored to your cooking time — from quick 15-minute meals to more elaborate dishes that take 45+ minutes.</p>
+            <div>
+              <p></p><strong>Front-end:</strong> HTML, CSS, JavaScript(Stimulus.js)</p>
+              <p></p><strong>Back-end:</strong> Ruby on Rails</p>
+            </div>
+          </div>
+        </div>
+
+        <!-------- Second Project -------->
+        <div class="card p-2 mt-4 border-0">
+          <div class="d-flex justify-content-evenly mx-auto p-1 w-100 rounded project-bg">
+            <img src="./assets/projects/mailList.png" alt="MailAi">
+          </div>
+          <div class="mt-3">
+            <h4>MailAi</h4>
+            <p>A chatbot that allows users to choose their desired level of politeness and formats emails accordingly with AI assistance. Especially useful in Japanese work environments, where the vocabulary used with colleagues differs significantly from the language used with leaders and customers.</p>
+            <div>
+              <p></p><strong>Front-end:</strong> HTML, CSS, JavaScript(Stimulus.js)</p>
+              <p></p><strong>Back-end:</strong> Ruby on Rails</p>
+            </div>
+          </div>
+        </div>
+
+        <!-------- Third Project -------->
+         <div class="card p-2 mt-4 border-0">
+          <div class="d-flex align-items-center justify-content-center mx-auto p-1 w-100 rounded project-bg">
+              <i class=" fs-4 fa-solid fa-hourglass-half"></i>
+          </div>
+          <div class="mt-3">
+            <h4>Upcoming Project</h4>
+            <p>Working on a project to schedule appointments with your barber. Currently studying React — this will be my first project using the JavaScript library.</p>
+            <div>
+              <p></p><strong>Front-end:</strong> HTML, CSS, React</p>
+              <p></p><strong>Back-end:</strong>???</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </section>
   </div>
