--- a/portifolio.html
+++ b/portifolio.html
@@ -23,7 +23,7 @@
         </div>
 
         <ul class="d-flex justify-content-between fs-5 nav-width pt-2">
-          <li class="list position-relative"><a class="nav-link" href="#home">Home</a></li>
+          <li class="list position-relative"><a class="nav-link" href="#">Home</a></li>
           <li class="list position-relative"><a class="nav-link" href="#about">About</a></li>
           <li class="list position-relative"><a class="nav-link" href="#projects">Projects</a></li>
           <li class="list position-relative"><a class="nav-link" href="#contact">Contact</a></li>
@@ -36,14 +36,15 @@
 
       <div class="d-flex align-items-center justify-content-center flex-column h-100 w-75">
         <h1 class="text-center fs-name">Hey, I'm Douglas Rocha</h1>
-        <p class="text-center mt-3 fs-5">From factory floors in Japan to building web experiences — I’m a self-taught
-          developer who turned frustration into transformation. I write code with the same grit that got me out of the
-          factory.</p>
+        <p class="text-center mt-3 fs-5">Fullstack dev who escaped the factory and now manufactures bugs professionally.
+          Clean code, clean layout, questionable commit messages… but only on Fridays, I swear..</p>
         <a class="rounded mt-4 fs-4 px-4 py-2 btn-project" href="#projects">PROJECTS</a>
         <div class="social bg-light position-absolute start-0 ">
           <ul class=" m-0 p-0 d-flex flex-column align-items-center rounded social-shadow">
-            <li class="m-2 p-2 rounded"><a href="https://www.linkedin.com/in/douglas-rocha97" target="_blank"><i class="fa-brands fa-linkedin fs-1 text-center"></i></a></li>
-            <li class="m-2 p-2 rounded"><a href="https://github.com/douglas-rocha97" target="_blank"><i class="fa-brands fa-github fs-1 text-cente"></i></a></li>
+            <li class="m-2 p-2 rounded"><a href="https://www.linkedin.com/in/douglas-rocha97" target="_blank"><i
+                  class="fa-brands fa-linkedin fs-1 text-center"></i></a></li>
+            <li class="m-2 p-2 rounded"><a href="https://github.com/douglas-rocha97" target="_blank"><i
+                  class="fa-brands fa-github fs-1 text-cente"></i></a></li>
           </ul>
         </div>
       </div>
@@ -54,11 +55,20 @@
         <span class="position-relative line">About me</span>
       </h2>
 
-      <p class="mt-2 text-center w-50 fs-5">Hi, I’m Douglas. After ten years in Japan’s manufacturing industry, I
-        realized I wanted challenge and purpose in every workday. I spent two years teaching myself JavaScript and, in
-        2025, graduated from Le Wagon Tokyo’s Fullstack Web Development Bootcamp. Now I’m looking for a team that’s both
-        ambitious and down-to-earth—a place where people actually enjoy their work and respect one another. If getting
-        here took this much dedication, imagine what I’ll achieve once I’m fully on board with your next project.</p>
+      <p class="mt-2 text-center w-50 fs-5">After a decade in Japan’s manufacturing world, I traded repetitive labor for
+        creative loops — and taught myself JavaScript. In 2025, I graduated from Le Wagon Tokyo’s Fullstack Web
+        Development Bootcamp, where I built apps with Rails, Stimulus.js, and a lot of coffee. Now I’m looking for a
+        team that’s ambitious but chill — where clean code matters, and people actually enjoy showing up. If I debugged
+        my way out of factory life, imagine what I’ll do with our next project.</p>
+        <h6>Skills</h6>
+      <ul class="mt-2 w-50 fs-5">
+        <li>Fullstack Web Development: Ruby on Rails, HTML, CSS, JavaScript (Stimulus.js)</li>
+        <li>Version Control: Git, GitHub</li>
+        <li>Deployment: Heroku</li>
+        <li>Database: SQL</li>
+        <li>UI/UX: Responsive layout, animation, Figma</li>
+        <li>Languages: English, Portuguese, conversational Japanese</li>
+      </ul>
     </section>
     <section class="py-4 ">
       <div class="overflow-hidden">
@@ -70,7 +80,7 @@
           <img src="./assets/stack-img/git.png" alt="git icon">
           <img src="./assets/stack-img/sql.png" alt="sql icon">
           <img src="./assets/stack-img/rails.png" alt="rails icon">
-            <!------ duplicated icons ------->
+          <!------ duplicated icons ------->
           <img src="./assets/stack-img/html.png" alt="html icon">
           <img src="./assets/stack-img/css.png" alt="css icon">
           <img src="./assets/stack-img/js.png" alt="js icon">
@@ -90,43 +100,54 @@
       <div class="cards px-5 mx-auto">
         <!-------- First Project -------->
         <div class="card p-2 mt-4 border-0">
-          <div class="d-flex justify-content-evenly mx-auto p-1 w-100 rounded project-bg">
-            <img src="./assets/projects/foodlyMain.png" alt="foodly">
-            <img src="./assets/projects/foodlyRecipe.png" alt="foodly">
-          </div>
-          <div class="mt-3">
-            <h4>Foodly</h4>
-            <p>mobile app that helps users find recipe ideas based on the ingredients they already have at home. By scanning an image of your fridge or pantry, Foodly identifies available ingredients and suggests recipes tailored to your cooking time — from quick 15-minute meals to more elaborate dishes that take 45+ minutes.</p>
-            <div>
-              <p></p><strong>Front-end:</strong> HTML, CSS, JavaScript(Stimulus.js)</p>
-              <p></p><strong>Back-end:</strong> Ruby on Rails</p>
+          <a href="https://github.com/Guayamose/Foodly" target="_blank">
+            <div class="d-flex justify-content-evenly mx-auto p-1 w-100 rounded project-bg">
+              <img src="./assets/projects/foodlyMain.png" alt="foodly">
+              <img src="./assets/projects/foodlyRecipe.png" alt="foodly">
             </div>
-          </div>
+            <div class="mt-3">
+              <h4>Foodly</h4>
+              <p>mobile app that helps users find recipe ideas based on the ingredients they already have at home. By
+                scanning an image of your fridge or pantry, Foodly identifies available ingredients and suggests recipes
+                tailored to your cooking time — from quick 15-minute meals to more elaborate dishes that take 45+
+                minutes.
+              </p>
+              <div>
+                <p></p><strong>Front-end:</strong> HTML, CSS, JavaScript(Stimulus.js)</p>
+                <p></p><strong>Back-end:</strong> Ruby on Rails</p>
+              </div>
+            </div>
+          </a>
         </div>
 
         <!-------- Second Project -------->
         <div class="card p-2 mt-4 border-0">
-          <div class="d-flex justify-content-evenly mx-auto p-1 w-100 rounded project-bg">
-            <img src="./assets/projects/mailList.png" alt="MailAi">
-          </div>
-          <div class="mt-3">
-            <h4>MailAi</h4>
-            <p>A chatbot that allows users to choose their desired level of politeness and formats emails accordingly with AI assistance. Especially useful in Japanese work environments, where the vocabulary used with colleagues differs significantly from the language used with leaders and customers.</p>
-            <div>
-              <p></p><strong>Front-end:</strong> HTML, CSS, JavaScript(Stimulus.js)</p>
-              <p></p><strong>Back-end:</strong> Ruby on Rails</p>
+          <a href="https://github.com/Guayamose/Email-chatbot-helper" target="_blank">
+            <div class="d-flex justify-content-evenly mx-auto p-1 w-100 rounded project-bg">
+              <img src="./assets/projects/mailList.png" alt="MailAi">
             </div>
-          </div>
+            <div class="mt-3">
+              <h4>MailAi</h4>
+              <p>A chatbot that allows users to choose their desired level of politeness and formats emails accordingly
+                with AI assistance. Especially useful in Japanese work environments, where the vocabulary used with
+                colleagues differs significantly from the language used with leaders and customers.</p>
+              <div>
+                <p></p><strong>Front-end:</strong> HTML, CSS, JavaScript(Stimulus.js)</p>
+                <p></p><strong>Back-end:</strong> Ruby on Rails</p>
+              </div>
+            </div>
+          </a>
         </div>
 
         <!-------- Third Project -------->
-         <div class="card p-2 mt-4 border-0">
+        <div class="card p-2 mt-4 border-0">
           <div class="d-flex align-items-center justify-content-center mx-auto p-1 w-100 rounded project-bg">
-              <i class=" fs-4 fa-solid fa-hourglass-half"></i>
+            <i class=" fs-4 fa-solid fa-hourglass-half"></i>
           </div>
           <div class="mt-3">
             <h4>Upcoming Project</h4>
-            <p>Working on a project to schedule appointments with your barber. Currently studying React — this will be my first project using the JavaScript library.</p>
+            <p>Working on a project to schedule appointments with your barber. Currently studying React — this will be
+              my first project using the JavaScript library.</p>
             <div>
               <p></p><strong>Front-end:</strong> HTML, CSS, React</p>
               <p></p><strong>Back-end:</strong>???</p>
@@ -136,6 +157,17 @@
       </div>
 
     </section>
+    <footer id="contact">
+      <div class="footer">
+        <div class="footer-links">
+          <a href="https://github.com/douglas-rocha97" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/douglas-rocha97" target="_blank"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="footer-copyright">
+          Let’s build something great together — contact me at Douglasrochajp25@gmail.com
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 
