--- a/portifolio.html
+++ b/portifolio.html
@@ -9,26 +9,35 @@
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <title>Douglas Rocha</title>
 </head>
 
 <body>
   <div>
     <header>
-      <nav class="fixed-top bg-light d-flex align-items-center justify-content-between px-5 pb-2 py-3 nav-shadow">
-
+      <nav class="navbar navbar-expand-md bg-light fixed-top px-4 py-3 nav-shadow">
+        <!-- Avatar + Name -->
         <div class="d-flex align-items-center gap-2">
           <img src="./assets/avatar.png" alt="avatar image" class="me-img rounded-circle">
-          <h5>Douglas Rocha</h5>
+          <h5 class="mb-0">Douglas Rocha</h5>
         </div>
 
-        <ul class="d-flex justify-content-between fs-5 nav-width pt-2">
-          <li class="list position-relative"><a class="nav-link" href="#">Home</a></li>
-          <li class="list position-relative"><a class="nav-link" href="#about">About</a></li>
-          <li class="list position-relative"><a class="nav-link" href="#projects">Projects</a></li>
-          <li class="list position-relative"><a class="nav-link" href="#contact">Contact</a></li>
-        </ul>
+        <!-- button hamburguer -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu"
+          aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
+        <!-- menu colapsável -->
+        <div class="collapse navbar-collapse justify-content-end text-center" id="navbarMenu">
+          <ul class="navbar-nav fs-5 gap-4">
+            <li class="nav-item position-relative"><a class="nav-link" href="#">Home</a></li>
+            <li class="nav-item position-relative"><a class="nav-link" href="#about">About</a></li>
+            <li class="nav-item position-relative"><a class="nav-link" href="#projects">Projects</a></li>
+            <li class="nav-item position-relative"><a class="nav-link" href="#contact">Contact</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
 
@@ -44,13 +53,13 @@
             <li class="m-2 p-2 rounded"><a href="https://www.linkedin.com/in/douglas-rocha97" target="_blank"><i
                   class="fa-brands fa-linkedin fs-1 text-center"></i></a></li>
             <li class="m-2 p-2 rounded"><a href="https://github.com/douglas-rocha97" target="_blank"><i
-                  class="fa-brands fa-github fs-1 text-cente"></i></a></li>
+                  class="fa-brands fa-github fs-1"></i></a></li>
           </ul>
         </div>
       </div>
       <i class="fa-solid fa-angles-down fs-1 scroll-arrow"></i>
     </section>
-    <section id="about" class="my-3 d-flex align-items-center justify-content-center flex-column">
+    <section id="about" class="my-3  d-flex align-items-center justify-content-center flex-column">
       <h2 class="my-5">
         <span class="position-relative line">About me</span>
       </h2>
@@ -60,7 +69,7 @@
         Development Bootcamp, where I built apps with Rails, Stimulus.js, and a lot of coffee. Now I’m looking for a
         team that’s ambitious but chill — where clean code matters, and people actually enjoy showing up. If I debugged
         my way out of factory life, imagine what I’ll do with our next project.</p>
-        <h6>Skills</h6>
+      <h6>Skills</h6>
       <ul class="mt-2 w-50 fs-5">
         <li>Fullstack Web Development: Ruby on Rails, HTML, CSS, JavaScript (Stimulus.js)</li>
         <li>Version Control: Git, GitHub</li>
@@ -70,7 +79,7 @@
         <li>Languages: English, Portuguese, conversational Japanese</li>
       </ul>
     </section>
-    <section class="py-4 ">
+    <section class="py-4">
       <div class="overflow-hidden">
         <div class="carousel-container d-flex gap-5 mt-2">
           <img src="./assets/stack-img/html.png" alt="html icon">
@@ -163,7 +172,7 @@
           <a href="https://github.com/douglas-rocha97" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://www.linkedin.com/in/douglas-rocha97" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
-        <div class="footer-copyright">
+        <div class="text-center">
           Let’s build something great together — contact me at Douglasrochajp25@gmail.com
         </div>
       </div>
