fixed small bugs

--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
       </div>
       <i class="fa-solid fa-angles-down fs-1 scroll-arrow"></i>
     </section>
-    <section id="about" class="my-3  d-flex align-items-center justify-content-center flex-column">
+    <section id="about" class="my-3 d-flex align-items-center justify-content-center flex-column">
       <h2 class="my-5">
         <span class="position-relative line">About me</span>
       </h2>
 
-      <p class="mt-2 text-center w-50 fs-5">After a decade in Japan’s manufacturing world, I traded repetitive labor for
+      <p class="mt-2 text-center w-75 w-sm-50 fs-5">After a decade in Japan’s manufacturing world, I traded repetitive labor for
         creative loops — and taught myself JavaScript. In 2025, I graduated from Le Wagon Tokyo’s Fullstack Web
         Development Bootcamp, where I built apps with Rails, Stimulus.js, and a lot of coffee. Now I’m looking for a
         team that’s ambitious but chill — where clean code matters, and people actually enjoy showing up. If I debugged
         my way out of factory life, imagine what I’ll do with our next project.</p>
       <h6>Skills</h6>
-      <ul class="mt-2 w-50 fs-5">
+      <ul class="mt-2 w-75 w-sm-50 fs-5">
         <li>Fullstack Web Development: Ruby on Rails, HTML, CSS, JavaScript (Stimulus.js)</li>
         <li>Version Control: Git, GitHub</li>
         <li>Deployment: Heroku</li>
@@ -106,9 +106,9 @@
         <span class="line">Projects</span>
       </h2>
 
-      <div class="cards px-5 mx-auto">
+      <div class="cards px-2 px-sm-5 mx-auto">
         <!-------- First Project -------->
-        <div class="card p-2 mt-4 border-0">
+        <div class="card p-2  mt-4 border-0">
           <a href="https://github.com/Guayamose/Foodly" target="_blank">
             <div class="d-flex justify-content-evenly mx-auto p-1 w-100 rounded project-bg">
               <img src="./assets/projects/foodlyMain.png" alt="foodly">
