--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         <span class="position-relative line">About me</span>
       </h2>
 
-      <p class="mt-2 text-center w-75 w-sm-50 fs-5">After a decade in Japan’s manufacturing world, I traded repetitive labor for
+      <p class="mt-2 text-center w-75 w-sm-50 fs-5">After a decade in Japan’s manufacturing world, I traded repetitive
+        labor for
         creative loops — and taught myself JavaScript. In 2025, I graduated from Le Wagon Tokyo’s Fullstack Web
         Development Bootcamp, where I built apps with Rails, Stimulus.js, and a lot of coffee. Now I’m looking for a
         team that’s ambitious but chill — where clean code matters, and people actually enjoy showing up. If I debugged
@@ -109,24 +110,33 @@
       <div class="cards px-2 px-sm-5 mx-auto">
         <!-------- First Project -------->
         <div class="card p-2  mt-4 border-0">
-          <a href="https://github.com/Guayamose/Foodly" target="_blank">
-            <div class="d-flex justify-content-evenly mx-auto p-1 w-100 rounded project-bg">
-              <img src="./assets/projects/foodlyMain.png" alt="foodly">
-              <img src="./assets/projects/foodlyRecipe.png" alt="foodly">
+          <div class="d-flex justify-content-evenly mx-auto p-1 w-100 rounded project-bg">
+            <img src="./assets/projects/foodlyMain.png" alt="foodly">
+            <img src="./assets/projects/foodlyRecipe.png" alt="foodly">
+          </div>
+          <div class="mt-3">
+            <h4>Foodly</h4>
+            <p>mobile app that helps users find recipe ideas based on the ingredients they already have at home. By
+              scanning an image of your fridge or pantry, Foodly identifies available ingredients and suggests recipes
+              tailored to your cooking time — from quick 15-minute meals to more elaborate dishes that take 45+
+              minutes.
+            </p>
+            <div>
+              <p></p><strong>Front-end:</strong> HTML, CSS, JavaScript(Stimulus.js)</p>
+              <p></p><strong>Back-end:</strong> Ruby on Rails</p>
             </div>
-            <div class="mt-3">
-              <h4>Foodly</h4>
-              <p>mobile app that helps users find recipe ideas based on the ingredients they already have at home. By
-                scanning an image of your fridge or pantry, Foodly identifies available ingredients and suggests recipes
-                tailored to your cooking time — from quick 15-minute meals to more elaborate dishes that take 45+
-                minutes.
-              </p>
-              <div>
-                <p></p><strong>Front-end:</strong> HTML, CSS, JavaScript(Stimulus.js)</p>
-                <p></p><strong>Back-end:</strong> Ruby on Rails</p>
-              </div>
+            <div class="d-flex gap-4 justify-content-center fs-3">
+              <a class="gitrepo" href="https://github.com/Guayamose/Foodly" target="_blank">
+                <i class="fa-brands fa-github"></i>
+              </a>
+
+              <a class="ytrepo" href="https://www.youtube.com/watch?v=4xmj3REIGe0&t=6303s" target="_blank"
+                rel="noopener noreferrer">
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+
             </div>
-          </a>
+          </div>
         </div>
 
         <!-------- Second Project -------->
