--- a/index.html
+++ b/index.html
@@ -134,28 +134,30 @@
                 rel="noopener noreferrer">
                 <i class="fa-brands fa-youtube"></i>
               </a>
-
             </div>
           </div>
         </div>
 
         <!-------- Second Project -------->
         <div class="card p-2 mt-4 border-0">
-          <a href="https://github.com/Guayamose/Email-chatbot-helper" target="_blank">
-            <div class="d-flex justify-content-evenly mx-auto p-1 w-100 rounded project-bg">
-              <img src="./assets/projects/mailList.png" alt="MailAi">
+          <div class="d-flex justify-content-evenly mx-auto p-1 w-100 rounded project-bg">
+            <img src="./assets/projects/mailList.png" alt="MailAi">
+          </div>
+          <div class="mt-3">
+            <h4>MailAi</h4>
+            <p>A chatbot that allows users to choose their desired level of politeness and formats emails accordingly
+              with AI assistance. Especially useful in Japanese work environments, where the vocabulary used with
+              colleagues differs significantly from the language used with leaders and customers.</p>
+            <div>
+              <p></p><strong>Front-end:</strong> HTML, CSS, JavaScript(Stimulus.js)</p>
+              <p></p><strong>Back-end:</strong> Ruby on Rails</p>
             </div>
-            <div class="mt-3">
-              <h4>MailAi</h4>
-              <p>A chatbot that allows users to choose their desired level of politeness and formats emails accordingly
-                with AI assistance. Especially useful in Japanese work environments, where the vocabulary used with
-                colleagues differs significantly from the language used with leaders and customers.</p>
-              <div>
-                <p></p><strong>Front-end:</strong> HTML, CSS, JavaScript(Stimulus.js)</p>
-                <p></p><strong>Back-end:</strong> Ruby on Rails</p>
-              </div>
+            <div class="d-flex gap-4 justify-content-center fs-3">
+              <a class="gitrepo" href="https://github.com/Guayamose/Email-chatbot-helper" target="_blank">
+                <i class="fa-brands fa-github"></i>
+              </a>
             </div>
-          </a>
+          </div>
         </div>
 
         <!-------- Third Project -------->
