--- a/index.html
+++ b/index.html
@@ -118,22 +118,28 @@
             <h4>Foodly</h4>
             <p>mobile app that helps users find recipe ideas based on the ingredients they already have at home. By
               scanning an image of your fridge or pantry, Foodly identifies available ingredients and suggests recipes
-              tailored to your cooking time — from quick 15-minute meals to more elaborate dishes that take 45+
+              tailored to your cooking time — from quick 15-minutes meals to more elaborate dishes that take 45+
               minutes.
             </p>
             <div>
-              <p></p><strong>Front-end:</strong> HTML, CSS, JavaScript(Stimulus.js)</p>
-              <p></p><strong>Back-end:</strong> Ruby on Rails</p>
+              <p><strong>Front-end:</strong> HTML, CSS, JavaScript(Stimulus.js)</p>
+              <p><strong>Back-end:</strong> Ruby on Rails</p>
             </div>
             <div class="d-flex gap-4 justify-content-center fs-3">
-              <a class="gitrepo" href="https://github.com/Guayamose/Foodly" target="_blank">
-                <i class="fa-brands fa-github"></i>
-              </a>
+              <div class="d-flex flex-column align-items-center">
+                <a class="gitrepo" href="https://github.com/Guayamose/Foodly" target="_blank">
+                  <i class="fa-brands fa-github"></i>
+                </a>
+              </div>
 
-              <a class="ytrepo" href="https://www.youtube.com/watch?v=4xmj3REIGe0&t=6303s" target="_blank"
-                rel="noopener noreferrer">
-                <i class="fa-brands fa-youtube"></i>
-              </a>
+              <div class="d-flex flex-column align-items-center">
+                <a class="ytrepo" href="https://www.youtube.com/watch?v=4xmj3REIGe0&t=6303s" target="_blank"
+                  rel="noopener noreferrer">
+                  <i class="fa-brands fa-youtube"></i>
+                </a>
+                <span class="legend">English Demo</span>
+              </div>
+
             </div>
           </div>
         </div>
@@ -149,8 +155,8 @@
               with AI assistance. Especially useful in Japanese work environments, where the vocabulary used with
               colleagues differs significantly from the language used with leaders and customers.</p>
             <div>
-              <p></p><strong>Front-end:</strong> HTML, CSS, JavaScript(Stimulus.js)</p>
-              <p></p><strong>Back-end:</strong> Ruby on Rails</p>
+              <p><strong>Front-end:</strong> HTML, CSS, JavaScript(Stimulus.js)</p>
+              <p><strong>Back-end:</strong> Ruby on Rails</p>
             </div>
             <div class="d-flex gap-4 justify-content-center fs-3">
               <a class="gitrepo" href="https://github.com/Guayamose/Email-chatbot-helper" target="_blank">
@@ -163,32 +169,65 @@
         <!-------- Third Project -------->
         <div class="card p-2 mt-4 border-0">
           <div class="d-flex align-items-center justify-content-center mx-auto p-1 w-100 rounded project-bg">
-            <i class=" fs-4 fa-solid fa-hourglass-half"></i>
+            <img src="./assets/BarberBook.jpg" alt="BarberBook app image">
           </div>
           <div class="mt-3">
-            <h4>Upcoming Project</h4>
-            <p>Working on a project to schedule appointments with your barber. Currently studying React — this will be
-              my first project using the JavaScript library.</p>
+            <h4>Barber Book</h4>
+            <p>Barbershop Scheduler
+              A web app that allows users to book barber appointments easily and efficiently. Users can select services
+              like haircuts or beard trims, choose from available barbers filtered dynamically based on the service. The
+              app handles authentication and authorization, ensuring secure access
+              to user-specific data.
+            </p>
             <div>
-              <p></p><strong>Front-end:</strong> HTML, CSS, React</p>
-              <p></p><strong>Back-end:</strong>???</p>
+              <p><strong>Front-end:</strong> HTML, CSS, JavaScript</p>
+              <p><strong>Back-end:</strong> Ruby on Rails</p>
+            </div>
+            <div class="d-flex gap-4 justify-content-center">
+              <div class="d-flex flex-column">
+                <a class="gitrepo fs-3" href="https://github.com/douglas-rocha97/barber-book" target="_blank">
+                  <i class="fa-brands fa-github"></i>
+                </a>
+              </div>
+
+              <div class="d-flex flex-column align-items-center">
+                <a class="ytrepo fs-3" href="https://youtu.be/gXeJD6kKL9g" target="_blank" rel="noopener noreferrer">
+                  <i class="fa-brands fa-youtube"></i>
+                </a>
+                <span class="legend">Portugues</span>
+              </div>
+
+              <div class="d-flex flex-column align-items-center ">
+                <a class="ytrepo fs-3 " href="https://youtu.be/5iJ1V3hxk_A" target="_blank" rel="noopener noreferrer">
+                  <i class="fa-brands fa-youtube"></i>
+                </a>
+                <span class="legend">English</span>
+              </div>
+
+              <div class="d-flex flex-column align-items-center ">
+                <a class="ytrepo fs-3 " href="https://youtu.be/v_bvWDRImdE" target="_blank" rel="noopener noreferrer">
+                  <i class="fa-brands fa-youtube"></i>
+                </a>
+                <span class="legend">日本語</span>
+              </div>
             </div>
           </div>
         </div>
       </div>
+  </div>
 
-    </section>
-    <footer id="contact">
-      <div class="footer">
-        <div class="footer-links">
-          <a href="https://github.com/douglas-rocha97" target="_blank"><i class="fab fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/douglas-rocha97" target="_blank"><i class="fab fa-linkedin"></i></a>
-        </div>
-        <div class="text-center">
-          Let’s build something great together — contact me at Douglasrochajp25@gmail.com
-        </div>
+  </section>
+  <footer id="contact">
+    <div class="footer">
+      <div class="footer-links">
+        <a href="https://github.com/douglas-rocha97" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/douglas-rocha97" target="_blank"><i class="fab fa-linkedin"></i></a>
       </div>
-    </footer>
+      <div class="text-center">
+        Let’s build something great together — contact me at Douglasrochajp25@gmail.com
+      </div>
+    </div>
+  </footer>
   </div>
 </body>
 
